Updates dependencies and parent version in backend
Upgrades the Spring Boot parent version to 3.4.6 for compatibility and stability improvements. Adds Jackson Databind as a dependency to enable JSON data binding functionality. Removes explicit PostgreSQL version specification to simplify dependency management.

Update dependencies and Spring Boot version

Upgrades Spring Boot parent version to 3.4.6 for compatibility and stability improvements.

Adds Jackson Databind dependency to enable JSON data binding functionality.

Removes explicit PostgreSQL version specification to simplify dependency management.

Update Spring Boot version and dependencies

Upgrades Spring Boot parent version to 3.4.6 for compatibility and stability improvements.

Adds Jackson Databind dependency to enable JSON data binding functionality.

Removes explicit PostgreSQL version specification to simplify dependency management.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0</version>
+        <version>3.4.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -35,7 +35,10 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
 
