--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>graphql-java-tools</artifactId>
             <version>11.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
