--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,9 @@
     "graphql": "^16.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.0",
+  "react-scripts": "5.0.0",
     "typescript": "^4.0.0"
+  ,"lodash.debounce": "^4.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
