--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -7,12 +7,12 @@
     <name>tesfa</name>
     <description>Spring Boot backend for Project Tesfa</description>
 
-    <parent>
-        <groupId>com.example</groupId>
-        <artifactId>tesfa-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath>parent-pom.xml</relativePath>
-    </parent>
+    <properties>
+        <java.version>21</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <repositories>
         <repository>
@@ -75,16 +75,6 @@
             <version>2.15.2</version>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java</groupId>
-            <artifactId>graphql-spring-boot-starter</artifactId>
-            <version>5.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.graphql-java</groupId>
-            <artifactId>graphql-java-tools</artifactId>
-            <version>11.1.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>3.4.6</version>
@@ -96,6 +86,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.4.6</version>
             </plugin>
         </plugins>
     </build>
