--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@mui/material": "^5.14.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "graphql": "^16.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-  "react-scripts": "5.0.0",
-    "typescript": "^4.0.0"
-  ,"lodash.debounce": "^4.0.8"
+    "react-scripts": "5.0.0",
+    "typescript": "^4.0.0",
+    "lodash.debounce": "^4.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
